edit user endpoint implemented
