# src/modules/user/models/User.ts
@@ -2,7 +2,7 @@ class User {
   id?: string;
   name: string;
   email: string;
-  password: string;
+  password?: string;
   role: number;
 
   constructor() {}
